Refactored Measurements Service Added Swagger
